fixed cart symbol alignment in header

--- a/wp-content/themes/xanadu/style.css
+++ b/wp-content/themes/xanadu/style.css
@@ -359,6 +359,7 @@ header .title span::after {
 	margin-top: 5px;
     margin-bottom: 0;
     padding-bottom: 0;
+	margin-left: 40px;
 }
 
 .cart-details span.inline {
@@ -366,12 +367,17 @@ header .title span::after {
     padding-top: 0;
 }
 
+.cart-details span.inline.quantity {
+	margin-left: 40px;
+}
+
 .cart-details img {
-    margin-top: 2px;
-    margin-right: 15px;
-    margin-left: 5px;
     display: inline-block;
     float: left;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	
 }
 
 .cart-details .price {
